--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -2,7 +2,7 @@ name: Matrix
 on: push
 jobs:
   Matrix:
-    continue_on_error: true
+    continue-on-error: true
     strategy:
       matrix:
         node-version: [12 , 13 ,14]
