--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -2,7 +2,7 @@ name : Reusable deploy
 on: workflow_call
 
 jobs:
-  runs-on: ubunutu-latest
+  runs-on: ubuntu-latest
   steps:
     - name: Output information
       run: echo "Deploying successfully"
