--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -1,9 +1,18 @@
 name : Reusable deploy
-on: workflow_call
-
-jobs:
-  Deploy:
-  runs-on: ubuntu-latest
-  steps:
-    - name: Output information
-      run: echo "Deploying successfully"
+on: 
+workflow_call:
+  input: 
+    artifact-item:
+     description: the artifact downloading files
+     required: false
+     default: dist
+     type: string
+  jobs:
+    Deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: actions/download-artifact@v4
+        with: ${{  }} 
+      - name: Output information
+        run: echo "Deploying successfully"
