--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -13,6 +13,6 @@ on:
       steps:
         - name: Get code
           uses: actions/download-artifact@v4
-          with: ${{  }} 
+          with: ${{ inputs.artifact-item }} 
         - name: Output information
           run: echo "Deploying successfully"
