--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -3,7 +3,7 @@ on:
   workflow_call:
     inputs: 
       artifact-item:
-      description: the artifact downloading files
+      description: "the artifact downloading files"
       required: false
       default: dist
       type: string
@@ -13,6 +13,7 @@ jobs:
       steps:
         - name: Get code
           uses: actions/download-artifact@v4
-          with: ${{ inputs.artifact-item }} 
+          with: 
+            name: ${{ inputs.artifact-item }} 
         - name: Output information
           run: echo "Deploying successfully"
