Getting outputs out from reusable workflows

--- a/.github/workflows/worklflow-using-reuse.yml
+++ b/.github/workflows/worklflow-using-reuse.yml
@@ -75,7 +75,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Print deploy output
-        runs: echo "${{ needs.deploy.outputs.result }}"
+        run: echo "${{ needs.deploy.outputs.result }}"
   Report:
       needs: [lint,deploy]
       if: failure()
