--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Output information
         run: echo "Deploying successfully"
       - name: Set Result Output
-        run: echo "::set-output name=step-result::success"
+        run: echo "{step-result}={success}" >> $GITHUB_OUTPUT
